# The-AI-Handbook

./: .gitignore  Agentic_RAG_With_MongoDB_and_LamaIndex.ipynb  README.md
04-resume_and_interview_preparer/: tailored_resume.md
1-Theory/ai/: 1. Introduction to Artificial Intelligence.md  README.md  (+1 more)
1-theory/ai/: README.md
10-automatic_event_planner/: Multi_Agent_Automatice_Event_Planner_using_CrewAI.ipynb
13-ai-operator-using-browser-use/: README.md  pyproject.toml  requirements.txt
4-AI-Agents/automatic_project_estimation/: pyproject.toml
4-AI-Agents/chat_with_apis/: README.md  main.py  pyproject.toml
4-AI-Agents/chat_with_apis/src/: app.py
4-AI-Agents/chat_with_apis/src/tools/: rag_tool.py
4-AI-Agents/chat_with_apis/src/utils/: crew_handler.py
4-AI-Agents/chat_with_apis/src/vector_store/: qdrant.py
4-AI-Agents/chat_with_apis/test/data/: deepseek.epub  deepseek.rtf
4-ai-agents/: Multi_Agents_Article_Reseracher_and_Write.ipynb
6-Trending/: README.md
agentic-chat-with-Browser-using-BrowserUse/: README.md  pyproject.toml
agentic-chat-with-Browser-using-BrowserUse/src/: main.py
agentic-chat-with-Browser-using-BrowserUse/src/browser_agent/: agent.py
agentic-chat-with-Browser-using-BrowserUse/src/ui/: chat_interface.py
agentic-chat-with-Browser-using-BrowserUse/src/utils/: helpers.py
blog_researcher_and_writer/: Multi_Agents_Blog_Reseracher_And_Write.ipynb
resume_and_interview_preparer/: Multi_Agent_Resume_and_Interview_Preparer_For_Job_using_CrewAI.ipynb  Niels_Christensen_Original_Resume.md  interview_materials.md
retail_arrangement_analysis_agent/: Multi_Agent_Retail_Arrangement_Analysis_Tool_with_CrewAI.ipynb
(+49 files in other folders)
