[project]
name = "automatic-project-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.100.0",
    "crewai-tools>=0.33.0",
    "ipython>=8.31.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "streamlit>=1.41.1",
    "tabulate>=0.9.0",
]
